[package]
name = "template"
version = "0.1.0"
edition = "2024"


[workspace]
members = [".", "entity", "migration"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs

salvo = { version = "0.84.0", features = ["oapi"] }
sea-orm = { version = "1.1.16", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "debug-print"] }
tokio = { version = "1.47.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
