[package]
name = "template"
version = "0.1.0"
edition = "2024"


[workspace]
members = [".",  "migration", "thunder", "thunder-macros"]


[dependencies]
async-trait = "0.1.89"
hex = "0.4.3"
migration = { path = "migration" } # depends on your needs

salvo = { version = "0.84.0", features = ["oapi"] }
sea-orm = { version = "1.1.16", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "debug-print"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
thunder = {path = "./thunder"}
