[package]
name = "valipower"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
fmt = "0.1.0"
once_cell = "1.21.3"
salvo = { version = "0.84.0", features = ["oapi"] }
salvo_core = "0.84.0"
tera = "1.20.0"
valipower-macros = {path="../valipower-macros"}

[dependencies.serde]
version = "1.0"
features = ["derive"]
