[package]
name = "thunder"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
fmt = "0.1.0"
hex = "0.4.3"
once_cell = "1.21.3"
salvo = { version = "0.84.0", features = ["oapi"] }
salvo_core = "0.84.0"
serde_json = "1.0.145"
sha2 = "0.10.9"
tera = "1.20.0"
thunder-macros = {path="../thunder-macros"}

[dependencies.serde]
version = "1.0"
features = ["derive"]
